portfolio page now renders correctly on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,6 @@
 }
 
 .footer-grass {
-    height: 400px;
+    height: 200px;
     background-color: darkgreen;
 }
